--- a/ModuleManager.UserDAL/ModuleManager.UserDAL.csproj
+++ b/ModuleManager.UserDAL/ModuleManager.UserDAL.csproj
@@ -110,7 +110,9 @@
       <LastGenOutput>UserDataDB.cs</LastGenOutput>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="UserDataDB.edmx.sql" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
