--- a/ModuleManager.WebTests/ModuleManager.WebTests.csproj
+++ b/ModuleManager.WebTests/ModuleManager.WebTests.csproj
@@ -45,7 +45,45 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\AutoMapper.3.3.0\lib\net40\AutoMapper.Net4.dll</HintPath>
     </Reference>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -60,12 +98,35 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="controller\AcountController_Test.cs" />
+    <Compile Include="testData\Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="controller\ModuleControllerTest.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ModuleManager.BusinessLogicTests\ModuleManager.BusinessLogicTests.csproj">
+      <Project>{a8315b83-c3a3-4296-907d-17a79f7b29ed}</Project>
+      <Name>ModuleManager.BusinessLogicTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModuleManager.BusinessLogic\ModuleManager.BusinessLogic.csproj">
+      <Project>{89c16482-39d4-4861-928d-d59a7db808e9}</Project>
+      <Name>ModuleManager.BusinessLogic</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ModuleManager.DomainDAL\ModuleManager.DomainDAL.csproj">
       <Project>{ac5d926e-de8a-41a5-aed4-8e60dffa7b1d}</Project>
       <Name>ModuleManager.DomainDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModuleManager.LoggingDAL\ModuleManager.LoggingDAL.csproj">
+      <Project>{3876c338-ab98-463e-92c4-45494a7c13cb}</Project>
+      <Name>ModuleManager.LoggingDAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModuleManager.LoggingSysteemTests\ModuleManager.LoggingSysteemTests.csproj">
+      <Project>{d5a31e6d-ec7d-429b-8f98-943176c05acf}</Project>
+      <Name>ModuleManager.LoggingSysteemTests</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ModuleManager.LoggingSysteem\ModuleManager.LoggingSysteem.csproj">
+      <Project>{bc407b28-8305-43a9-b2e4-7efc912ad51e}</Project>
+      <Name>ModuleManager.LoggingSysteem</Name>
     </ProjectReference>
     <ProjectReference Include="..\ModuleManager.UserDAL\ModuleManager.UserDAL.csproj">
       <Project>{0b13bfe6-aed5-49dc-85b6-b8ea460048a0}</Project>
