--- a/ModuleManager.WebTests/ModuleManager.WebTests.csproj
+++ b/ModuleManager.WebTests/ModuleManager.WebTests.csproj
@@ -99,7 +99,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="controller\AcountController_Test.cs" />
-    <Compile Include="testData\Module.cs" />
+    <Compile Include="testData\TestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="controller\ModuleControllerTest.cs" />
   </ItemGroup>
