--- a/ModuleManager.Web/Web.config
+++ b/ModuleManager.Web/Web.config
@@ -99,8 +99,18 @@
   <!--Defining the connection strings from the DAL libraries is neccesarry to load this connections into the MVC App
     UserSQLConnection is required for the custom SQLConnection in the account actions, because it does not accept metadata-->
   <connectionStrings>
-    <add name="UserContext" connectionString="metadata=res://*/UserDataDB.csdl|res://*/UserDataDB.ssdl|res://*/UserDataDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=UserDal;Integrated Security=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DomainContext" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=DomainDal;Integrated Security=true;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    
+    <!-- Localhost -->
+    <!--<add name="DomainContext" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=DomainDal;Integrated Security=true;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="UserContext" connectionString="metadata=res://*/UserDataDB.csdl|res://*/UserDataDB.ssdl|res://*/UserDataDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=UserDal;Integrated Security=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+
+    <!-- Azure -->
+    <!--<add name="DomainContext" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=avans-eu.database.windows.net;initial catalog=amm_Domain;persist security info=True;user id=linksonder@avans-eu;password=Abc12345;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  
+    <!-- mssql.aii.avans.nl -->
+    <add name="DomainContext" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql.aii.avans.nl;initial catalog=amm_Domain;persist security info=True;user id=ssmulder;password=ChangeMe;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UserContext"   connectionString="metadata=res://*/UserDataDB.csdl|res://*/UserDataDB.ssdl|res://*/UserDataDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql.aii.avans.nl;initial catalog=amm_Users;persist security info=True;user id=ssmulder;password=ChangeMe;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+
 
   </connectionStrings>
 
