--- a/ModuleManager.WebTests/app.config
+++ b/ModuleManager.WebTests/app.config
@@ -44,8 +44,8 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="UserContext" connectionString="metadata=res://*/UserDataDB.csdl|res://*/UserDataDB.ssdl|res://*/UserDataDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=UserDal;Integrated Security=true;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DomainContext" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=DomainDal.Test;Integrated Security=true;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DomainContext" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql.aii.avans.nl;initial catalog=studiegids.domain.test;persist security info=True;user id=ssmulder;password=ChangeMe;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="UserContext"   connectionString="metadata=res://*/UserDataDB.csdl|res://*/UserDataDB.ssdl|res://*/UserDataDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=mssql.aii.avans.nl;initial catalog=studiegids.user.test;persist security info=True;user id=ssmulder;password=ChangeMe;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
     
 </configuration>
