--- a/ModuleManager.WebTests/ModuleManager.WebTests.csproj
+++ b/ModuleManager.WebTests/ModuleManager.WebTests.csproj
@@ -56,6 +56,9 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
+    <Reference Include="Moq">
+      <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -99,6 +102,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="controller\AcountController_Test.cs" />
+    <Compile Include="controller\partial\ModulesControllerTest.cs" />
     <Compile Include="testData\TestData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="controller\ModuleControllerTest.cs" />
