--- a/ModuleManager.Web/ModuleManager.Web.csproj
+++ b/ModuleManager.Web/ModuleManager.Web.csproj
@@ -319,6 +319,7 @@
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers\ActionLinkHelper.cs" />
+    <Compile Include="Helpers\NumberWordComparer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AccountVM.cs" />
     <Compile Include="ViewModels\CheckModulesViewModel.cs" />
