--- a/ModuleManager.Web/packages.config
+++ b/ModuleManager.Web/packages.config
@@ -3,6 +3,9 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="AutoMapper" version="3.3.0" targetFramework="net45" />
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
+  <package id="DotNetOpenAuth.Core" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.4.13329" targetFramework="net45" />
+  <package id="DotNetOpenAuth.OAuth.Core" version="4.3.4.13329" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jquery.datatables" version="1.10.3" targetFramework="net45" />
@@ -14,6 +17,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.0.20505.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
