Mogelijk gemaakt om naam te wijzigen
Related Work Items: #124

--- a/ModuleManager.Web/ModuleManager.Web.csproj
+++ b/ModuleManager.Web/ModuleManager.Web.csproj
@@ -429,6 +429,7 @@
     <Content Include="Views\Admin\Curriculum\Module\_Edit.cshtml" />
     <Content Include="Views\Admin\Curriculum\Docent\_Add.cshtml" />
     <Content Include="Views\Admin\Curriculum\Docent\_Delete.cshtml" />
+    <Content Include="Views\Admin\Curriculum\Docent\_Edit.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
