--- a/ModuleManager.Web/Web.config
+++ b/ModuleManager.Web/Web.config
@@ -16,6 +16,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="avansConsumerKey" value="3412ea76ab6139816bbeed25650ad10ec0c347f5" />
+    <add key="avansConsumerSecret" value="79526f5f5c8f8a3721cdcff10a2b99a6cbd14599" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
