--- a/ModuleManager.Domain/App.Config
+++ b/ModuleManager.Domain/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DomainDalEntities" connectionString="metadata=res://*/ModuleManagerEntities.csdl|res://*/ModuleManagerEntities.ssdl|res://*/ModuleManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=DomainDal;integrated security=True;application name=EntityFramework;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="DomainEntities" connectionString="metadata=res://*/ModuleManagerEntities.csdl|res://*/ModuleManagerEntities.ssdl|res://*/ModuleManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\v11.0;initial catalog=ModuleManager.Domain;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
