--- a/ModuleManager.Domain/ModuleManager.Domain.csproj
+++ b/ModuleManager.Domain/ModuleManager.Domain.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Beoordelingen.cs">
+    <Compile Include="Beoordeling.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Blok.cs">
@@ -60,7 +60,7 @@
     <Compile Include="Competentie.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Docenten.cs">
+    <Compile Include="Docent.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Fase.cs">
@@ -75,13 +75,15 @@
     <Compile Include="Icon.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Leerdoelen.cs">
+    <Compile Include="Interfaces\IGenericRepository.cs" />
+    <Compile Include="Interfaces\IUnitOfWork.cs" />
+    <Compile Include="Leerdoel.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Leerlijn.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="Leermiddelen.cs">
+    <Compile Include="Leermiddel.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Module.cs">
@@ -118,6 +120,8 @@
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\UnitOfWork.cs" />
     <Compile Include="Schooljaar.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
@@ -127,7 +131,7 @@
     <Compile Include="StudieBelasting.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
-    <Compile Include="StudiePunten.cs">
+    <Compile Include="StudiePunt.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
     <Compile Include="Tag.cs">
@@ -136,6 +140,8 @@
     <Compile Include="Toetsvorm.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
+    <Compile Include="Utility\DomainConstants.cs" />
+    <Compile Include="Utility\MyDbInitializer.cs" />
     <Compile Include="Weekplanning.cs">
       <DependentUpon>ModuleManagerEntities.tt</DependentUpon>
     </Compile>
