--- a/ModuleManager.WebTests/app.config
+++ b/ModuleManager.WebTests/app.config
@@ -48,7 +48,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="DomainDalEntities" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string='data source=mssql.aii.avans.nl;initial catalog=studiegids.domain.test;persist security info=True;user id=ssmulder;password=ChangeMe;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient"/>
+    <add name="DomainEntities" connectionString="metadata=res://*/ModuleManagerDB.csdl|res://*/ModuleManagerDB.ssdl|res://*/ModuleManagerDB.msl;provider=System.Data.SqlClient;provider connection string='data source=mssql.aii.avans.nl;initial catalog=studiegids.domain.test;persist security info=True;user id=ssmulder;password=ChangeMe;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient"/>
     <add name="UserContext" connectionString="metadata=res://*/UserDataDB.csdl|res://*/UserDataDB.ssdl|res://*/UserDataDB.msl;provider=System.Data.SqlClient;provider connection string='data source=mssql.aii.avans.nl;initial catalog=studiegids.user.test;persist security info=True;user id=ssmulder;password=ChangeMe;MultipleActiveResultSets=True;App=EntityFramework'" providerName="System.Data.EntityClient"/>
   </connectionStrings>
     
