--- a/ModuleManager.Web/ModuleManager.Web.csproj
+++ b/ModuleManager.Web/ModuleManager.Web.csproj
@@ -342,6 +342,7 @@
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Helpers\ActionLinkHelper.cs" />
     <Compile Include="Helpers\NumberWordComparer.cs" />
+    <Compile Include="Helpers\TextHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\AccountVM.cs" />
     <Compile Include="ViewModels\CheckModulesViewModel.cs" />
