--- a/ModuleManager.Domain/App.Config
+++ b/ModuleManager.Domain/App.Config
@@ -4,7 +4,6 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -15,6 +14,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-<connectionStrings>
-  <add name="DomainEntities" connectionString="metadata=res://*/ModuleManagerEntities.csdl|res://*/ModuleManagerEntities.ssdl|res://*/ModuleManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=STIJN;initial catalog=ModuleManager.Domain;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings></configuration>
+  <connectionStrings>
+    <add name="DomainEntities" connectionString="metadata=res://*/ModuleManagerEntities.csdl|res://*/ModuleManagerEntities.ssdl|res://*/ModuleManagerEntities.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(localdb)\STIJN;initial catalog=ModuleManager.Domain;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+</configuration>
